[package]
name = "sqlx-sqlite"
readme = "README.md"
documentation = "https://docs.rs/sqlx"
description = "SQLite driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
any = ["sqlx-core/any"]
json = ["sqlx-core/json", "serde"]
offline = ["sqlx-core/offline", "serde"]
migrate = ["sqlx-core/migrate"]

chrono = ["dep:chrono", "bitflags"]

[dependencies]
futures-core = { version = "0.3.19", default-features = false }
futures-channel = { version = "0.3.19", default-features = false, features = ["sink", "alloc", "std"] }
# used by the SQLite worker thread to block on the async mutex that locks the database handle
futures-executor = { version = "0.3.19" }
futures-intrusive = "0.4.0"
futures-util = { version = "0.3.19", default-features = false, features = ["alloc", "sink"] }

chrono = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

bitflags = { version = "1.3.2", optional = true }

url = { version = "2.2.2", default-features = false }
percent-encoding = "2.1.0"

flume = { version = "0.10.9", default-features = false, features = ["async"] }

atoi = "1.0"

log = "0.4.17"

serde = { version = "1.0.145", features = ["derive"], optional = true }

[dependencies.libsqlite3-sys]
version = "0.25.1"
default-features = false
features = [
    "pkg-config",
    "vcpkg",
    "bundled",
    "unlock_notify"
]

[dependencies.sqlx-core]
version = "=0.6.2"
path = "../sqlx-core"
