[package]
name = "sqlx-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlx = { default-features = false, path = ".." }
env_logger = "0.10.0"
dotenvy = "0.15.6"
anyhow = "1.0.69"
async-std = { version = "1.12.0", features = [ "attributes" ] }
tokio = { version = "1.25.0", features = [ "full" ] }
