[package]
name = "sqlx"
version = "0.6.0-pre"
repository = "https://github.com/launchbadge/sqlx"
description = "🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries without a DSL."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["database", "async", "postgres", "mysql", "sqlite"]
categories = ["database", "asynchronous"]
authors = [
    "LaunchBadge <contact@launchbadge.com>"
]

[features]
default = []

# blocking (std) runtime
blocking = ["sqlx-core/blocking", "sqlx-mysql/blocking"]

# async runtimes
async-std = ["sqlx-core/async-std", "sqlx-mysql/async"]
actix = ["sqlx-core/actix", "sqlx-mysql/async"]
tokio = ["sqlx-core/tokio", "sqlx-mysql/async"]

# databases
mysql = ["sqlx-mysql"]

[dependencies]
sqlx-core = { version = "0.6.0-pre", path = "../sqlx-core" }
sqlx-mysql = { version = "0.6.0-pre", path = "../sqlx-mysql", optional = true }
