[package]
name = "sqlx"
version = "0.6.0-pre"
repository = "https://github.com/launchbadge/sqlx"
description = "🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries without a DSL."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["database", "async", "postgres", "mysql", "sqlite"]
categories = ["database", "asynchronous"]
authors = [
    "LaunchBadge <contact@launchbadge.com>"
]

[features]
default = []

# blocking (std) runtime
blocking = ["sqlx-core/blocking"]

# abstract async runtime
# not meant to be used directly
# activates several crates used in all async runtimes
async = ["futures-util", "sqlx-core/async"]

# async runtimes
async-std = ["async", "sqlx-core/async-std"]
actix = ["async", "sqlx-core/actix"]
tokio = ["async", "sqlx-core/tokio"]

# Connection Pool
pool = ["crossbeam-queue", "parking_lot"]

# MySQL
mysql = ["sqlx-mysql"]
mysql-async = ["async", "mysql", "sqlx-mysql/async"]
mysql-blocking = ["blocking", "mysql", "sqlx-mysql/blocking"]

# Postgres
postgres = ["sqlx-postgres"]
postgres-async = ["async", "postgres", "sqlx-postgres/async"]
postgres-blocking = ["blocking", "postgres", "sqlx-postgres/blocking"]


[dependencies]
sqlx-core = { version = "0.6.0-pre", path = "../sqlx-core" }
sqlx-mysql = { version = "0.6.0-pre", path = "../sqlx-mysql", optional = true }
sqlx-postgres = { version = "0.6.0-pre", path = "../sqlx-postgres", optional = true }
futures-util = { version = "0.3", optional = true, features = ["io"] }

crossbeam-queue = { version = "0.3.1", optional = true }
parking_lot = { version = "0.11", optional = true }

[dev-dependencies]
futures = "0.3.5"
