[package]
name = "contacts"
version = "0.1.0"
edition = "2018"

[dependencies]
sqlx = { path = "../..", features = [ "postgres" ] }
failure = "0.1.5"
env_logger = "0.6.2"
runtime = { version = "=0.3.0-alpha.6", default-features = false }
runtime-tokio = { version = "=0.3.0-alpha.5" }
futures-preview = "=0.3.0-alpha.17"
fake = { version = "2.0", features=[ "derive" ] }
rand = "0.7.0"
