[package]
name = "sqlx-example-realworld-postgres"
version = "0.1.0"
edition = "2018"
workspace = "../.."

[dependencies]
anyhow = "1.0.25"
async-std = { version = "1.2.0", features = [ "attributes" ] }
tide = "0.4.0"
sqlx = { path = "../..", features = [ "postgres" ] }
serde = { version = "1.0.103", features = [ "derive" ] }
futures = "0.3.1"
rust-argon2 = "0.6.0"
rand = "0.7.2"
jsonwebtoken = "6"
chrono = "0.4.10"
