[package]
name = "sqlx-example-realworld"
version = "0.1.0"
authors = ["Samani G. Gikandi <samani@gojulas.com>"]
edition = "2018"
workspace = "../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
anyhow = "1.0.28"
async-std = "1.5.0"
async-trait = "0.1.27"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7.1"
futures = "0.3"
heck = "0.3.1"
http = "0.1"
itertools = "0.9.0"
jsonwebtoken = "6.0"
log = "0.4.8"
paw = "1.0"
rand = "0.7.3"
rust-argon2 = "0.6.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
sqlx = { path = "../../", features = ["chrono"]}
structopt = { version = "0.3", features = ["paw"] }
thiserror = "1.0.14"
tide = "0.6.0"
